Added authentication implementation + start of security feature with token
