# back/controllers/utils/util.js
@@ -11,21 +11,21 @@ module.exports.getPathParams = function getPathParams(req){
     return url.parse(req.url).pathname.split('/').slice(1);
 };
 
-module.exports.getPassword = function getPassword(req, res, next) {
-    logger.info('Getting password from db for user with id:' + Util.getPathParams(req)[2]);
-
-    return User.findById(
-        getPathParams(req)[2],
-        function (err, user) {
-         if (err)
-          next(err.message);
-
-         logger.debug('password retrieved:' + user.password);
-         //if (!! user.password ||_.isNull(user.password) || _.isEmpty(user.password)) {
-         //    logger.error('No password found :o !');
-         //}
-
-         next(user.password);
-
-        });
- };
+//module.exports.getPassword = function getPassword(req, res, next) {
+//    logger.info('Getting password from db for user with id:' + Util.getPathParams(req)[2]);
+//
+//    return User.findById(
+//        getPathParams(req)[2],
+//        function (err, user) {
+//         if (err)
+//          next(err.message);
+//
+//         logger.debug('password retrieved:' + user.password);
+//         //if (!! user.password ||_.isNull(user.password) || _.isEmpty(user.password)) {
+//         //    logger.error('No password found :o !');
+//         //}
+//
+//         next(user.password);
+//
+//        });
+// };
